--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "animation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://MarinaZLKN.github.io/AnimationPractise",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
